# Mathaton

./: app.py  index.html  pyproject.toml  style.css
templates/: index.html  login.html  signup.html  style.css
